# Mourice

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: operations.md  paths.json
docs/: architecture.md  troubleshooting.md
scripts/: clean_reference.py  xtts_daemon.py  xtts_speak.py
src/mourice/: __init__.py  app.py  cli.py  config.py  evals.py  log.py
src/mourice/core/: __init__.py  context.py  orchestrator.py  prompt.py
src/mourice/interfaces/: __init__.py  telegram.py  terminal.py  voice.py
src/mourice/llm/: __init__.py  base.py  ollama.py  router.py
src/mourice/memory/: __init__.py  chunking.py  embedders.py  store.py  sync.py  vault.py
src/mourice/modules/: __init__.py  base.py  filesystem.py  notes.py  search_memory.py  shell.py
src/mourice/voice/: __init__.py  audio.py  factory.py  stt.py  tts.py  xtts.py
tests/: test_app.py  test_audio.py  test_chunking.py  test_cli.py  test_config.py  test_context.py  test_embedders.py  test_evals.py  test_filesystem.py  test_log.py  test_note_tools.py  test_ollama_provider.py  test_orchestrator.py  test_prompt.py  test_router.py  test_search.py  test_search_memory_tool.py  test_shell.py  test_store.py  test_stt.py  test_sync.py  test_telegram.py  test_terminal.py  test_tools.py  test_tts.py  test_vault.py  test_voice_loop.py  test_xtts.py
